crates/k-rust/tests/snapshots/definition_configuration__generates_java_cell_fragment_collection_and_initializer_families.snap
---
source: crates/k-rust/tests/definition_configuration.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  configuration\n    <threads>\n      <thread multiplicity=\"*\">\n        <k> $PGM:Int </k>\n        <opt multiplicity=\"?\"> 0 </opt>\n      </thread>\n    </threads>\n  ensures false\nendmodule\n"
---
[
    "production Int ::= r\"[0-9]+\" label=- [token=\"\"]",
    "production KCell ::= \"<k>\" K \"</k>\" label=<k> [cell=\"\", cellName=\"k\", format=\"%1%i%n%2%d%n%3\", maincell=\"\"]",
    "production KCell ::= \"initKCell\" \"(\" Map \")\" label=initKCell [function=\"\", initializer=\"\"]",
    "rule initKCell(Init)=>`<k>`(#noDots(.KList),#SemanticCastToInt(`project:Int`(`Map:lookup`(Init,#token(\"$PGM\",\"KConfigVar\")))),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production OptCell ::= \"initOptCell\" label=initOptCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initOptCell(.KList)=>`<opt>`(#noDots(.KList),#token(\"0\",\"Int\"),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production OptCell ::= \".OptCell\" label=.OptCell []",
    "production OptCell ::= \"<opt>\" Int \"</opt>\" label=<opt> [cell=\"\", cellName=\"opt\", format=\"%1%i%n%2%d%n%3\", multiplicity=\"?\", unit=\".OptCell\"]",
    "production ThreadCell ::= \"<thread>\" KCell OptCell \"</thread>\" label=<thread> [cell=\"\", cellName=\"thread\", format=\"%1%i%n%2%n%3%d%n%4\", multiplicity=\"*\"]",
    "production ThreadCellBag ::= \"initThreadCell\" \"(\" Map \")\" label=initThreadCell [function=\"\", initializer=\"\"]",
    "rule initThreadCell(Init)=>`<thread>`(#noDots(.KList),#cells(initKCell(Init),#cells(.KList)),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production KCellOpt ::= KCell label=- []",
    "production KCellOpt ::= \"noKCell\" label=noKCell [cellOptAbsent={\"name\":\"KCell\",\"node\":\"KSort\",\"params\":[]}]",
    "production OptCellOpt ::= OptCell label=- []",
    "production OptCellOpt ::= \"noOptCell\" label=noOptCell [cellOptAbsent={\"name\":\"OptCell\",\"node\":\"KSort\",\"params\":[]}]",
    "production ThreadCellFragment ::= \"<thread>-fragment\" KCellOpt OptCellOpt \"</thread>-fragment\" label=<thread>-fragment [cellFragment={\"name\":\"ThreadCell\",\"node\":\"KSort\",\"params\":[]}]",
    "syntax ThreadCellBag [cellCollection=\"\", hook=\"BAG.Bag\"]",
    "production ThreadCellBag ::= ThreadCell label=- []",
    "production ThreadCellBag ::= \"ThreadCellBagItem\" \"(\" ThreadCell \")\" label=ThreadCellBagItem [format=\"%3\", function=\"\", hook=\"BAG.element\"]",
    "production ThreadCellBag ::= \".ThreadCellBag\" label=.ThreadCellBag [function=\"\", hook=\"BAG.unit\"]",
    "production ThreadCellBag ::= ThreadCellBag ThreadCellBag label=_ThreadCellBag_ [assoc=\"\", avoid=\"\", bag=\"\", cellCollection=\"\", comm=\"\", element=\"ThreadCellBagItem\", function=\"\", hook=\"BAG.concat\", unit=\".ThreadCellBag\", wrapElement=\"<thread>\"]",
    "production ThreadsCell ::= \"<threads>\" ThreadCellBag \"</threads>\" label=<threads> [cell=\"\", cellName=\"threads\", format=\"%1%i%n%2%d%n%3\"]",
    "production ThreadsCell ::= \"initThreadsCell\" \"(\" Map \")\" label=initThreadsCell [function=\"\", initializer=\"\"]",
    "rule initThreadsCell(Init)=>`<threads>`(#noDots(.KList),initThreadCell(Init),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"false\",\"Bool\") [initializer=\"\"]",
    "production ThreadsCellFragment ::= \"<threads>-fragment\" ThreadCellBag \"</threads>-fragment\" label=<threads>-fragment [cellFragment={\"name\":\"ThreadsCell\",\"node\":\"KSort\",\"params\":[]}]",
]
