crates/k-rust/tests/snapshots/definition_configuration__generates_map_set_and_list_cell_collections.snap
---
source: crates/k-rust/tests/definition_configuration.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  configuration <top>\n    <entries multiplicity=\"*\" type=\"Map\"><key> 0 </key></entries>\n    <workers multiplicity=\"*\" type=\"Set\"><worker> 0 </worker></workers>\n    <queue multiplicity=\"*\" type=\"List\"><item> 0 </item></queue>\n  </top>\nendmodule\n"
---
[
    "production Int ::= r\"[0-9]+\" label=- [token=\"\"]",
    "production KeyCell ::= \"<key>\" Int \"</key>\" label=<key> [cell=\"\", cellName=\"key\", format=\"%1%i%n%2%d%n%3\"]",
    "production KeyCell ::= \"initKeyCell\" label=initKeyCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initKeyCell(.KList)=>`<key>`(#noDots(.KList),#token(\"0\",\"Int\"),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production EntriesCell ::= \"<entries>\" KeyCell \"</entries>\" label=<entries> [cell=\"\", cellName=\"entries\", format=\"%1%i%n%2%d%n%3\", multiplicity=\"*\", type=\"Map\"]",
    "production EntriesCellMap ::= \"initEntriesCell\" label=initEntriesCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initEntriesCell(.KList)=>`<entries>`(#noDots(.KList),initKeyCell(.KList),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production KeyCellOpt ::= KeyCell label=- []",
    "production KeyCellOpt ::= \"noKeyCell\" label=noKeyCell [cellOptAbsent={\"name\":\"KeyCell\",\"node\":\"KSort\",\"params\":[]}]",
    "production EntriesCellFragment ::= \"<entries>-fragment\" KeyCellOpt \"</entries>-fragment\" label=<entries>-fragment [cellFragment={\"name\":\"EntriesCell\",\"node\":\"KSort\",\"params\":[]}]",
    "syntax EntriesCellMap [cellCollection=\"\", hook=\"MAP.Map\"]",
    "production EntriesCellMap ::= EntriesCell label=- []",
    "production EntriesCellMap ::= \"EntriesCellMapItem\" \"(\" KeyCell \",\" EntriesCell \")\" label=EntriesCellMapItem [format=\"%5\", function=\"\", hook=\"MAP.element\"]",
    "production EntriesCellMap ::= \".EntriesCellMap\" label=.EntriesCellMap [function=\"\", hook=\"MAP.unit\"]",
    "production EntriesCellMap ::= EntriesCellMap EntriesCellMap label=_EntriesCellMap_ [assoc=\"\", avoid=\"\", cellCollection=\"\", comm=\"\", element=\"EntriesCellMapItem\", function=\"\", hook=\"MAP.concat\", unit=\".EntriesCellMap\", wrapElement=\"<entries>\"]",
    "production Bool ::= KeyCell \"in_keys\" \"(\" EntriesCellMap \")\" label=EntriesCellMap:in_keys [function=\"\", hook=\"MAP.in_keys\", total=\"\"]",
    "production KeyCell ::= \"EntriesCellMapKey\" \"(\" EntriesCell \")\" label=EntriesCellMapKey [function=\"\", total=\"\"]",
    "rule `EntriesCellMapKey`(`<entries>`(#noDots(.KList),Key,#dots(.KList)))=>Key requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") []",
    "production WorkerCell ::= \"<worker>\" Int \"</worker>\" label=<worker> [cell=\"\", cellName=\"worker\", format=\"%1%i%n%2%d%n%3\"]",
    "production WorkerCell ::= \"initWorkerCell\" label=initWorkerCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initWorkerCell(.KList)=>`<worker>`(#noDots(.KList),#token(\"0\",\"Int\"),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production WorkersCell ::= \"<workers>\" WorkerCell \"</workers>\" label=<workers> [cell=\"\", cellName=\"workers\", format=\"%1%i%n%2%d%n%3\", multiplicity=\"*\", type=\"Set\"]",
    "production WorkersCellSet ::= \"initWorkersCell\" label=initWorkersCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initWorkersCell(.KList)=>`<workers>`(#noDots(.KList),initWorkerCell(.KList),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production WorkerCellOpt ::= WorkerCell label=- []",
    "production WorkerCellOpt ::= \"noWorkerCell\" label=noWorkerCell [cellOptAbsent={\"name\":\"WorkerCell\",\"node\":\"KSort\",\"params\":[]}]",
    "production WorkersCellFragment ::= \"<workers>-fragment\" WorkerCellOpt \"</workers>-fragment\" label=<workers>-fragment [cellFragment={\"name\":\"WorkersCell\",\"node\":\"KSort\",\"params\":[]}]",
    "syntax WorkersCellSet [cellCollection=\"\", hook=\"SET.Set\"]",
    "production WorkersCellSet ::= WorkersCell label=- []",
    "production WorkersCellSet ::= \"WorkersCellSetItem\" \"(\" WorkersCell \")\" label=WorkersCellSetItem [format=\"%3\", function=\"\", hook=\"SET.element\"]",
    "production WorkersCellSet ::= \".WorkersCellSet\" label=.WorkersCellSet [function=\"\", hook=\"SET.unit\"]",
    "production WorkersCellSet ::= WorkersCellSet WorkersCellSet label=_WorkersCellSet_ [assoc=\"\", avoid=\"\", cellCollection=\"\", comm=\"\", element=\"WorkersCellSetItem\", function=\"\", hook=\"SET.concat\", idem=\"\", unit=\".WorkersCellSet\", wrapElement=\"<workers>\"]",
    "production ItemCell ::= \"<item>\" Int \"</item>\" label=<item> [cell=\"\", cellName=\"item\", format=\"%1%i%n%2%d%n%3\"]",
    "production ItemCell ::= \"initItemCell\" label=initItemCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initItemCell(.KList)=>`<item>`(#noDots(.KList),#token(\"0\",\"Int\"),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production QueueCell ::= \"<queue>\" ItemCell \"</queue>\" label=<queue> [cell=\"\", cellName=\"queue\", format=\"%1%i%n%2%d%n%3\", multiplicity=\"*\", type=\"List\"]",
    "production QueueCellList ::= \"initQueueCell\" label=initQueueCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initQueueCell(.KList)=>`<queue>`(#noDots(.KList),initItemCell(.KList),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production ItemCellOpt ::= ItemCell label=- []",
    "production ItemCellOpt ::= \"noItemCell\" label=noItemCell [cellOptAbsent={\"name\":\"ItemCell\",\"node\":\"KSort\",\"params\":[]}]",
    "production QueueCellFragment ::= \"<queue>-fragment\" ItemCellOpt \"</queue>-fragment\" label=<queue>-fragment [cellFragment={\"name\":\"QueueCell\",\"node\":\"KSort\",\"params\":[]}]",
    "syntax QueueCellList [cellCollection=\"\", hook=\"LIST.List\"]",
    "production QueueCellList ::= QueueCell label=- []",
    "production QueueCellList ::= \"QueueCellListItem\" \"(\" QueueCell \")\" label=QueueCellListItem [format=\"%3\", function=\"\", hook=\"LIST.element\"]",
    "production QueueCellList ::= \".QueueCellList\" label=.QueueCellList [function=\"\", hook=\"LIST.unit\"]",
    "production QueueCellList ::= QueueCellList QueueCellList label=_QueueCellList_ [assoc=\"\", avoid=\"\", cellCollection=\"\", element=\"QueueCellListItem\", function=\"\", hook=\"LIST.concat\", unit=\".QueueCellList\", wrapElement=\"<queue>\"]",
    "production TopCell ::= \"<top>\" EntriesCellMap WorkersCellSet QueueCellList \"</top>\" label=<top> [cell=\"\", cellName=\"top\", format=\"%1%i%n%2%n%3%n%4%d%n%5\"]",
    "production TopCell ::= \"initTopCell\" label=initTopCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initTopCell(.KList)=>`<top>`(#noDots(.KList),#cells(#cells(.KList),#cells(.KList),#cells(.KList)),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production TopCellFragment ::= \"<top>-fragment\" EntriesCellMap WorkersCellSet QueueCellList \"</top>-fragment\" label=<top>-fragment [cellFragment={\"name\":\"TopCell\",\"node\":\"KSort\",\"params\":[]}]",
]
