crates/k-rust/tests/snapshots/definition_configuration__generates_stream_exit_and_builtin_cell_attributes.snap
---
source: crates/k-rust/tests/definition_configuration.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  configuration <top>\n    <out stream=\"stdout\"> 0 </out>\n    <status exit=\"\" unused=\"\"> 0 </status>\n  </top>\nendmodule\n"
---
[
    "production Int ::= r\"[0-9]+\" label=- [token=\"\"]",
    "production OutCell ::= \"<out>\" Int \"</out>\" label=<out> [cell=\"\", cellName=\"out\", format=\"%1%i%n%2%d%n%3\", stream=\"stdout\"]",
    "production OutCell ::= \"initOutCell\" \"(\" Map \")\" label=initOutCell [function=\"\", initializer=\"\"]",
    "rule initOutCell(Init)=>`<out>`(#noDots(.KList),#token(\"0\",\"Int\"),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production StatusCell ::= \"<status>\" Int \"</status>\" label=<status> [cell=\"\", cellName=\"status\", exit=\"\", format=\"%1%i%n%2%d%n%3\", unused=\"\"]",
    "production StatusCell ::= \"initStatusCell\" label=initStatusCell [function=\"\", initializer=\"\", total=\"\"]",
    "rule initStatusCell(.KList)=>`<status>`(#noDots(.KList),#token(\"0\",\"Int\"),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production Int ::= \"getExitCode\" \"(\" GeneratedTopCell \")\" label=getExitCode [function=\"\"]",
    "syntax GeneratedTopCell []",
    "rule getExitCode(`<generatedTop>`(#dots(.KList),`<status>`(#noDots(.KList),Exit,#noDots(.KList)),#dots(.KList)))=>Exit requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") []",
    "production TopCell ::= \"<top>\" OutCell StatusCell \"</top>\" label=<top> [cell=\"\", cellName=\"top\", format=\"%1%i%n%2%n%3%d%n%4\"]",
    "production TopCell ::= \"initTopCell\" \"(\" Map \")\" label=initTopCell [function=\"\", initializer=\"\"]",
    "rule initTopCell(Init)=>`<top>`(#noDots(.KList),#cells(initOutCell(Init),initStatusCell(.KList)),#noDots(.KList)) requires #token(\"true\",\"Bool\") ensures #token(\"true\",\"Bool\") [initializer=\"\"]",
    "production OutCellOpt ::= OutCell label=- []",
    "production OutCellOpt ::= \"noOutCell\" label=noOutCell [cellOptAbsent={\"name\":\"OutCell\",\"node\":\"KSort\",\"params\":[]}]",
    "production StatusCellOpt ::= StatusCell label=- []",
    "production StatusCellOpt ::= \"noStatusCell\" label=noStatusCell [cellOptAbsent={\"name\":\"StatusCell\",\"node\":\"KSort\",\"params\":[]}]",
    "production TopCellFragment ::= \"<top>-fragment\" OutCellOpt StatusCellOpt \"</top>-fragment\" label=<top>-fragment [cellFragment={\"name\":\"TopCell\",\"node\":\"KSort\",\"params\":[]}]",
]
