crates/k-rust/tests/snapshots/definition_configuration__rejects_missing_external_cell.snap
---
source: crates/k-rust/tests/definition_configuration.rs
expression: expand_configurations(& definition).unwrap_err()
---
Invalid {
    module: "MAIN",
    source: Some(
        "configuration.k",
    ),
    location: Some(
        Location {
            start_line: 3,
            start_column: 1,
            end_line: 3,
            end_column: 25,
        },
    ),
    message: "external cell <missing/> does not resolve to one initializer production",
}
