crates/k-rust/tests/snapshots/definition_configuration__rejects_type_without_star.snap
---
source: crates/k-rust/tests/definition_configuration.rs
description: "K definition:\n\nmodule MAIN\nsyntax Int ::= r\"[0-9]+\" [token]\nconfiguration <k type=\"Set\"> 0 </k>\nendmodule"
---
Invalid {
    module: "MAIN",
    source: Some(
        "configuration.k",
    ),
    location: Some(
        Location {
            start_line: 3,
            start_column: 1,
            end_line: 3,
            end_column: 36,
        },
    ),
    message: "cell <k> specifies type without multiplicity=\"*\"",
}
