crates/k-rust/tests/snapshots/definition_configuration__rejects_unrecognized_properties.snap
---
source: crates/k-rust/tests/definition_configuration.rs
expression: expand_configurations(& definition).unwrap_err()
---
Invalid {
    module: "MAIN",
    source: Some(
        "configuration.k",
    ),
    location: Some(
        Location {
            start_line: 3,
            start_column: 1,
            end_line: 3,
            end_column: 37,
        },
    ),
    message: "unrecognized cell property \"mystery\"",
}
